[package]
name = "eva-controller-pubsub"
version = "4.0.2"
edition = "2021"

[dependencies]
busrt = { version = "0.4", features = ["rpc", "ipc"] }
eva-common = { version = "0.3.34", features = ["payload", "common-payloads", "events", "actions", "time", "acl"] }
eva-sdk = { version = "0.3.36", features = ["controller"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.143", features = ["derive", "rc"] }
ttl_cache = { version = "0.5.1" }
log = "0.4.14"
async-channel = "1.6.1"
jemallocator = { version = "0.5.0" }
psrpc = { path = "../../psrpc" }
psrt = "0.2"
paho-mqtt = "0.10.0"
serde_json = "1.0.79"
once_cell = "1.9.0"
async-recursion = "1.0.4"
parking_lot = "0.12.1"

[features]
std-alloc = []
