[package]
name = "eva-controller-pubsub"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["rpc", "ipc"] , workspace = true }
eva-common = { features = ["payload", "common-payloads", "events", "actions", "time", "acl"] , workspace = true }
eva-sdk = { features = ["controller"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
ttl_cache = { version = "0.5.1" }
log = { workspace = true }
async-channel = { workspace = true }
jemallocator = { workspace = true }
psrpc = { path = "../../psrpc" }
psrt = "0.2"
paho-mqtt = "0.12.3"
serde_json = { workspace = true }
once_cell = { workspace = true }
async-recursion = { workspace = true }
parking_lot = "0.12.1"

[features]
std-alloc = []
