[package]
name = "eva-controller-pubsub"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["rpc", "ipc"] , workspace = true }
eva-common = { features = ["payload", "common-payloads", "events", "actions", "time", "acl"] , workspace = true }
eva-sdk = { features = ["controller"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
ttl_cache = { workspace = true }
log = { workspace = true }
logreducer = { path = "../../logreducer" }
async-channel = { workspace = true }
mimalloc = { workspace = true }
psrpc = { path = "../../psrpc" }
psrt = { workspace = true }
paho-mqtt = { workspace = true }
serde_json = { workspace = true }
async-recursion = { workspace = true }
parking_lot = { workspace = true }

[features]
std-alloc = []
