[package]
name = "eva-controller-sr"
version = "4.0.2"
edition = "2021"

[dependencies]
eva-common = { version = "0.3.37", features = ["events", "time", "common-payloads"] }
eva-sdk = { version = "0.3.37", features = ["controller"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.143", features = ["derive", "rc"] }
log = "0.4.14"
lazy_static = "1.4.0"
async-channel = "1.7.1"
jemallocator = { version = "0.5.0" }
bmart = "0.2.2"
once_cell = "1.9.0"

[features]
std-alloc = []
