[package]
name = "eva-controller-sr"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
eva-common = { features = ["events", "time", "common-payloads"] , workspace = true }
eva-sdk = { features = ["controller"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
jemallocator = { workspace = true }
bmart = { workspace = true }
once_cell = { workspace = true }
shlex = "1.3.0"

[features]
std-alloc = []
