[package]
name = "eva-controller-system"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
busrt = { workspace = true, features = ["rpc", "ipc", "rt"], optional = true }
eva-common = { workspace = true, features = ["events", "console-logger"] }
eva-sdk = { workspace = true, features = ["controller"], optional = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive", "rc"] }
log = { workspace = true }
mimalloc = { workspace = true, optional = true }
sysinfo = { workspace = true }
parking_lot = { workspace = true }
http-body-util = { version = "0.1.0", optional = true }
hyper = { version = "1.1.0", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1.3", features = ["http1", "server", "tokio"], optional = true }
serde_json = { workspace = true }
tokio-task-pool = { version = "0.1.5", features = ["log"] }
serde_yaml = { workspace = true, optional = true }
is-terminal = { version = "0.4.11", optional = true }
env_logger = { version = "0.11.1", optional = true }
syslog = { workspace = true, optional = true }
bmart = { workspace = true }
reqwest = { version = "0.12.9", optional = true, features = ["json"] }
clap = { workspace = true, optional = true, features = ["derive"] }
eventlog = { version = "0.2.2", optional = true }
windows-service = { version = "0.6.0", optional = true }
num_cpus = { workspace = true }

rustls = { version = "0.23", features = ["ring"], optional = true }
rustls-cng = { version = "0.5", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
hex = { workspace = true, optional = true }

# linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16.0" }

[lib]
name = "eva_system_common"
path = "src/lib.rs"

[[bin]]
name = "eva-controller-system"
path = "src/service.rs"
required-features = ["service"]

[[bin]]
name = "eva-cs-agent-linux"
path = "src/agent/linux.rs"
required-features = ["agent-linux"]

[[bin]]
name = "eva-cs-agent-windows"
path = "src/agent/windows.rs"
required-features = ["agent-windows"]

[features]
std-alloc = []
fips = ["rustls?/fips", "rustls-cng?/fips", "eva-common/fips"]

service = ["busrt", "async-trait", "http-body-util", "hyper", "hyper-util", "mimalloc", "eva-sdk"]
agent = ["serde_yaml", "env_logger", "reqwest", "clap"]
agent-linux = ["agent", "syslog", "is-terminal", "mimalloc", "eva-common/services", "reqwest/native-tls", "eva-common/fips"]
agent-windows = ["agent", "eventlog", "windows-service", "reqwest/rustls-tls", "rustls", "rustls-cng", "rustls-native-certs", "dep:hex"]

default = ["service"]
#default = ["agent-windows"]
