[package]
name = "eva-controller-trap"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["rpc", "ipc"] , workspace = true }
eva-common = { features = ["events", "time"] , workspace = true }
eva-sdk = { workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
async-channel = { workspace = true }
jemallocator = { workspace = true }
ipnetwork = "0.20.0"
snmp-parser = "0.8"
snmptools = { version = "0.0.11", features = ["static"] }
psrpc = { path = "../../psrpc" }
once_cell = { workspace = true }

[features]
std-alloc = []
