[package]
name = "eva-controller-trap"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["rpc", "ipc"] , workspace = true }
eva-common = { features = ["events", "time"] , workspace = true }
eva-sdk = { workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
mimalloc = { workspace = true }
ipnetwork = { workspace = true }
snmp-parser = "0.8"
snmptools = { version = "0.0.11", features = ["static"] }
psrpc = { path = "../../psrpc" }

[features]
std-alloc = []
