[package]
name = "eva-controller-virtual"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
eva-common = { features = ["events", "common-payloads"] , workspace = true }
eva-sdk = { features = ["controller"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
uuid = { features = ["serde", "v4"] , workspace = true }
mimalloc = { workspace = true }
bmart = { workspace = true }
tagmap ="0.0.9"
once_cell = { workspace = true }

[features]
std-alloc = []
