[package]
name = "eva-dapp"
version = "4.0.2"
edition = "2021"

[dependencies]
eva-common = { version = "0.3.14" }
eva-sdk = { version = "0.3.6", features = ["http"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.143", features = ["derive", "rc"] }
log = "0.4.14"
async-channel = "1.7.1"
jemallocator = { version = "0.5.0" }
bmart = "0.2.6"
once_cell = "1.18.0"
serde_yaml = "0.9.25"

[features]
std-alloc = []
