[package]
name = "eva-dapp"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
eva-common = { workspace = true }
eva-sdk = { features = ["http"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
jemallocator = { workspace = true }
bmart = { workspace = true }
once_cell = { workspace = true }
serde_yaml = "0.8"

[features]
std-alloc = []
