[package]
name = "eva-db-influx"
version = "4.0.0"
edition = "2021"

[dependencies]
busrt = { version = "0.3", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.143", features = ["derive", "rc"] }
eva-common = { version = "0.1.176", features = ["events", "time", "common-payloads"] }
log = "0.4.14"
lazy_static = "1.4.0"
async-channel = "1.7.1"
eva-sdk = { version = "0.1.104" }
once_cell = "1.9.0"
hyper = { version = "0.14.18", features = ["client", "http1", "http2", "tcp", "stream"] }
hyper-tls = "0.5.0"
base64 = "0.13.0"
simple-pool = "0.0.11"
serde_json = "1.0.79"
urlencoding = "2.1.0"
csv-async = "1.2.4"
futures = "0.3.21"
jemallocator = { version = "0.5.0" }
wshack = { version = "0.1", path = "../../wshack" }

[features]
std-alloc = []
