[package]
name = "eva-db-influx"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
busrt = { features = ["full"] , workspace = true }
tokio = { features = ["full"] , workspace = true }
async-trait = { workspace = true }
serde = { features = ["derive", "rc"] , workspace = true }
eva-common = { features = ["events", "time", "common-payloads"] , workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
eva-sdk = { workspace = true }
once_cell = { workspace = true }
hyper = { version = "0.14.18", features = ["client", "http1", "http2", "tcp", "stream"] }
hyper-tls = "0.5"
base64 = "0.13"
simple-pool = { workspace = true }
serde_json = { workspace = true }
urlencoding = "2.1.3"
csv-async = "1.2.6"
futures = "0.3.30"
jemallocator = { workspace = true }
tokio-native-tls = "0.3.1"
crypto-tools = { path = "../../crypto-tools" }

[features]
std-alloc = []
openssl-vendored = ["tokio-native-tls/vendored"]
